minor aesthetic fix on landing splash image. Extra padding for mobile devices

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -318,7 +318,7 @@ hr {
 
 @media screen and (max-width: 500px) {
     .splashContent {
-        height: 130vh;
+        height: 150vh;
     }
 
     .splashContent #centerWelcomeAndCalendar h1 {
